--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-streamlit>=1.30.0
-pandas>=2.0.0
-streamlit-gsheets-connection>=0.0.3
+streamlit
+pandas
+streamlit-gsheets-connection
+st-gsheets-connection
